--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -35,6 +35,6 @@
     padding-bottom: 10px;
     padding-left: 130px;
     padding-right: 130px;
-    padding-top: 98px;
+    padding-top: 70px;
   }
 }
